Update copy rights

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </main>
         
         <footer class="text-center py-12">
-            <p class="text-gray-400">このインフォグラフィックは「日本の持続的成長を実現する戦略的規制改革プラン」の提言に基づき作成されました。</p>
+            <p class="text-gray-400">&copy; 2025 Inhyeok Yeo All rights reserved.</p>
         </footer>
 
     </div>
